--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
+    "gen:types": "supabase gen types typescript --project-id simple_files_app > src/database.types.ts",
     "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
     "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
     "lint": "yarn lint:format && yarn lint:fix ",
     "type-check": "tsc"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.496.0",
+    "@aws-sdk/client-sts": "^3.499.0",
     "@supabase/supabase-js": "^2.39.3",
+    "aws-sdk": "^2.1540.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -31,6 +35,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.5.1",
+    "supabase": "^1.136.3",
     "typescript": "^4.5.5",
     "vite": "^2.9.12"
   },
