--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@supabase/supabase-js": "^2.39.3",
     "aws-sdk": "^2.1540.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
